[package]
name = "demo"
description = "wasm demo"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
console_error_panic_hook = "*"
rand = "*"
getrandom = { version = "*", features = ["js"] }
futures = "*"
wasm-bindgen-futures = "*"
serde = { version = "1", features = ["derive"] }

[dependencies.web-sys]
version = "*"
features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
  "HtmlImageElement",
  "Response",
]

[dev-dependencies]
wasm-bindgen-test = "*"
futures = "*"
js-sys = "*"
wasm-bindgen-futures = "*"
