[package]
name = "demo"
description = "wasm demo"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "*"
console_error_panic_hook = "*"
rand = "*"
getrandom = { version = "*", features = ["js"] }
futures = "*"
wasm-bindgen-futures = "*"
gloo-utils = { version = "*", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
async-trait = "*"

[dependencies.web-sys]
version = "*"
features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
  "HtmlImageElement",
  "Response",
  "Performance",
  "KeyboardEvent",
]

[dev-dependencies]
wasm-bindgen-test = "*"
futures = "*"
js-sys = "*"
wasm-bindgen-futures = "*"
